--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -62,12 +62,24 @@
   border-top: 1px solid var(--GreyText);
   text-align: center;
 }
-@media screen and (max-width: 480px) {
+
+@media screen and (min-width: 480px) {
   .footer .sectionContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
   .footer .sectionContainer .footerLinks {
     justify-content: center;
+  }
+}
+@media screen and (min-width: 570px) {
+  .footer .sectionContainer {
+    padding-top: 2rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (min-width: 680px) {
+  .footer .sectionContainer {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
