--- a/src/components/navbar/navBar.css
+++ b/src/components/navbar/navBar.css
@@ -67,7 +67,13 @@
 .btn:hover {
   background: var(--HoverColor);
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
+  .navBar {
+    align-items: center;
+  }
+  .navBarOne .none {
+    display: flex;
+  }
   .navBarMenu {
     position: absolute;
     background: var(--SecondaryColor);
