--- a/src/components/support/support.css
+++ b/src/components/support/support.css
@@ -63,3 +63,9 @@
   top: 10px;
   z-index: 1;
 }
+@media screen and (min-width: 570px) {
+  .support .sectionContainer .infoDiv .textDiv {
+    margin-top: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
