--- a/src/components/travelers/travelers.css
+++ b/src/components/travelers/travelers.css
@@ -92,7 +92,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .travelers .sectionContainer .travelersContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
