--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -67,3 +67,14 @@
     top: -8%;
   }
 }
+@media screen and (min-width: 960px) {
+  .home {
+    padding-top: 13rem;
+  }
+  .home .mainText {
+    width: 70%;
+    padding-bottom: 1.5rem;
+    font-size: 22px;
+    line-height: 4rem;
+  }
+}
