--- a/src/components/lounge/lounge.css
+++ b/src/components/lounge/lounge.css
@@ -39,3 +39,14 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+@media screen and (min-width: 768px) {
+  .lounge .sectionContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .lounge .sectionContainer.textDiv {
+    grid-area: 1;
+  }
+  .grids {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
