animate elmts on scroll with aos

--- a/src/components/subscribers/subscribers.css
+++ b/src/components/subscribers/subscribers.css
@@ -43,3 +43,13 @@
     max-width: max-content;
   }
 }
+@media screen and (min-width: 1106px) {
+  .subscribe .sectionContainer {
+    max-width: 60%;
+  }
+}
+@media screen and (min-width: 1332px) {
+  .subscribe .sectionContainer {
+    max-width: 50%;
+  }
+}
