--- a/src/components/navbar/navBar.css
+++ b/src/components/navbar/navBar.css
@@ -71,6 +71,15 @@
 .btn:hover {
   background: var(--HoverColor);
 }
+.toggleIcon .icon {
+  font-size: 30px;
+  color: var(--BlackColor);
+}
+.showNavBar {
+  right: 50%;
+  transition: 0.5s ease-in-out;
+}
+
 @media screen and (min-width: 768px) {
   .navBar {
     align-items: center;
@@ -164,13 +173,18 @@
     display: none;
   }
 }
-.toggleIcon .icon {
-  font-size: 30px;
-  color: var(--BlackColor);
+@media screen and (min-width: 1024px) {
+  .navBar .navBarOne,
+  .navBar .navBarTwo {
+    padding: 1.5rem 5rem;
+  }
 }
-.showNavBar {
-  right: 50%;
-  transition: 0.5s ease-in-out;
+@media screen and (min-width: 1332px) {
+  .navBar .navBarOne .menu {
+    gap: 1rem;
+  }
+  .navBar .navBarTwo .menu .listItem {
+    padding: 0 1rem;
+    font-size: 14px;
+  }
 }
-
-/*=== HOME ===*/
