--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -8,7 +8,7 @@
 .search .sectionContainer .btns {
   width: 100%;
   background: var(--SecondaryColor);
-  padding: 1.5rem;
+  padding: 0.5rem;
   border-radius: 1rem;
   flex-direction: column;
   margin: auto;
@@ -65,6 +65,9 @@
   opacity: 0.5;
 }
 
+.btnBlock {
+  justify-content: center;
+}
 @media screen and (min-width: 480px) {
   .search .sectionContainer .searchInputs {
     display: grid;
