--- a/src/main.css
+++ b/src/main.css
@@ -4,11 +4,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "League Spartan", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 :root {
-  --PrimaryColor: hsl(255, 50%, 48%);
+  --PrimaryColor: #004a6d;
   --SecondaryColor: hsl(180, 17%, 95%);
   --ColorOne: hsl(15, 74%, 70%);
   --ColorTwo: hsl(28, 100%, 82%);
@@ -22,8 +22,8 @@
   --GreyText: rgb(145, 145, 145);
   --InputColor: hsl(330, 12%, 97%);
   --BoxShadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
-    rgba(0, 0, 0, 0.05) 0px 4px, 6px -2px;
-  --transition: 02s ease-in-out;
+    rgba(0, 0, 0, 0.05) 0px 1px, 2px -1px;
+  --transition: 01s ease-in-out;
 }
 
 body {
